fixed partially unit tests